--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Your awesome title
+title: Nicholas Brown
 author: GitHub User
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my resume! If your interested or have any questions, please let me know!
 
 # social links
 twitter_username: your-twitter-handle
