--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nicholas Brown
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 author: Java/C++ Coder
 email: NickBProgramming@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
